# tp_c_cpp_2019

./: .gitignore  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  README.md  clang-format  coverage.info  dz2
Counter/: counter.c  counter.h
linters/: run.sh
production/: maketxt.cpp  prod_parallel.cpp  prod_trivial.cpp
tests/: test.cpp
trivialCounter/: trivialCounter.c  trivialCounter.h
